increase heapsize for embedded wildfly