@@ -252,15 +252,6 @@
                                 <jboss.home>${project.basedir}/target/wildfly-${wildfly.version}</jboss.home>
                                 <module.path>${project.basedir}/target/wildfly-${wildfly.version}/modules</module.path>
                             </systemPropertyVariables>
-                            <argLine>-Xmx5000m -XX:MaxPermSize=1024m -XX:PermSize=1024m
-                                -Dnhinc.properties.dir=${project.build.directory}/wildfly-${wildfly.version}/modules/system/layers/base/org/connectopensource/configuration/main
-                                -Djavax.net.ssl.keyStore=${project.build.directory}/wildfly-${wildfly.version}/modules/system/layers/base/org/connectopensource/configuration/main/gateway.jks
-                                -Djavax.net.ssl.keyStorePassword=changeit
-                                -Djavax.net.ssl.keyStoreType=JKS
-                                -Djavax.net.ssl.trustStore=${project.build.directory}/wildfly-${wildfly.version}/modules/system/layers/base/org/connectopensource/configuration/main/cacerts.jks
-                                -Djavax.net.ssl.trustStorePassword=changeit
-                                -Djavax.net.ssl.trustStoreType=JKS -DCLIENT_KEY_ALIAS=gateway</argLine>
-
                             <redirectTestOutputToFile>false</redirectTestOutputToFile>
                         </configuration>
                         <!-- <argLine>-Dnhinc.properties.dir=${project.basedir}/target/wildfly-${wildfly.version}/modules/system/layers/base/org/connectopensource/configuration/main/</argLine> -->
@@ -282,7 +273,7 @@
                                 </goals>
                                 <configuration>
                                     <javaOpts>
-                                        <javaOpt>-Xmx5000m</javaOpt>
+                                        <javaOpt>-Xmx8g</javaOpt>
                                         <javaOpt>-XX:MaxPermSize=1024m</javaOpt>
                                         <javaOpt>-XX:PermSize=1024m</javaOpt>
                                         <javaOpt>-Dnhinc.properties.dir=${project.build.directory}/wildfly-${wildfly.version}/modules/system/layers/base/org/connectopensource/configuration/main</javaOpt>
@@ -647,15 +638,6 @@
                                 <jboss.home>${project.basedir}/target/wildfly-${wildfly.version}</jboss.home>
                                 <module.path>${project.basedir}/target/wildfly-${wildfly.version}/modules</module.path>
                             </systemPropertyVariables>
-                            <argLine>-Xmx5000m -XX:MaxPermSize=1024m -XX:PermSize=1024m
-                                -Dnhinc.properties.dir=${project.build.directory}/wildfly-${wildfly.version}/modules/system/layers/base/org/connectopensource/configuration/main
-                                -Djavax.net.ssl.keyStore=${project.build.directory}/wildfly-${wildfly.version}/modules/system/layers/base/org/connectopensource/configuration/main/gateway.jks
-                                -Djavax.net.ssl.keyStorePassword=changeit
-                                -Djavax.net.ssl.keyStoreType=JKS
-                                -Djavax.net.ssl.trustStore=${project.build.directory}/wildfly-${wildfly.version}/modules/system/layers/base/org/connectopensource/configuration/main/cacerts.jks
-                                -Djavax.net.ssl.trustStorePassword=changeit
-                                -Djavax.net.ssl.trustStoreType=JKS -DCLIENT_KEY_ALIAS=gateway</argLine>
-
                             <redirectTestOutputToFile>false</redirectTestOutputToFile>
                         </configuration>
                     </plugin>
@@ -676,7 +658,7 @@
                                 </goals>
                                 <configuration>
                                     <javaOpts>
-                                        <javaOpt>-Xmx5000m</javaOpt>
+                                        <javaOpt>-Xmx8g</javaOpt>
                                         <javaOpt>-XX:MaxPermSize=1024m</javaOpt>
                                         <javaOpt>-XX:PermSize=1024m</javaOpt>
                                         <javaOpt>-Dnhinc.properties.dir=${project.build.directory}/wildfly-${wildfly.version}/modules/system/layers/base/org/connectopensource/configuration/main</javaOpt>
